--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ sitepackages = True
 deps =
     nose
     coverage
-commands = nosetests ./tests --with-cover --cover-package=thwacky
+commands = nosetests ./tests --with-cover --cover-package=appthwack
 
 [testenv:py26]
 basepython = python2.6
